--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#">Register</a>
                   </li>
-                  <button type="button" class="btn btn-outline-primary">Register</button>
+                  <button type="button" class="btn btn-outline-primary mx-5">Register</button>
                 </ul>
               </div>
             </div>
@@ -112,9 +112,9 @@
 
             <!-- 1st course -->
 
-            <div>
+            <div class="row g-2">
           
-            <div>
+            <div class="col-6">
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
@@ -132,7 +132,7 @@
             </div>
 
                 <!-- 2nd course -->
-            <div>
+            <div class="col-6">
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
@@ -150,7 +150,7 @@
             </div>
 
             <!-- 3rd course -->
-            <div>
+            <div class="col-6">
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
@@ -168,7 +168,7 @@
             </div>
 
             <!-- 4th course -->
-            <div>
+            <div class="col-6">
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
@@ -186,7 +186,7 @@
             </div>
 
             <!-- 5th course -->
-            <div>
+            <div class="col-6">
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
@@ -204,7 +204,7 @@
             </div>
 
             <!-- 6th course -->
-            <div>
+            <div class="col-6">
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
@@ -221,17 +221,21 @@
               </div>
             </div>
         </div>
-
+        <div class="d-flex justify-content-center">
+        <button type="button" class="btn btn-primary btn-lg">See More Courses</button>
       </div>
+      </div>
+      
 
-        <div class="container d-flex my-5">
-          <div class="p-5 mb-1 bg-primary text-white">
+        <div class="container d-flex my-5 bg-primary justify-content-around">
+          <div class="p-5 mb-1 text-white">
           <h1>Ready to join?</h1>
-          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          <p>It is a long established fact that a reader will be distracted by the </p>
+          <p>readable content of a page when looking at its layout.</p>
           </div>
           <!-- modal start -->
-          <div class="p-4">
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Register Now</button>
+          <div class="p-5 m-5">
+          <button type="button" class="btn btn-light text-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Register Now</button>
           </div>
 
           <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
